# korra

./: .clang-format  .codespellrc  .gitignore  .prettierignore  .prettierrc.yml  Korra.slnx  LICENSE.md  README.md  TROUBLESHOOTING.md  diagrams.md  package.json  platformio.ini  pnpm-lock.yaml  pnpm-workspace.yaml  sample-twin.json  tsconfig.json  turbo.json
firmware/: .editorconfig  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Kconfig  VERSION  local.conf.template  package.json  prj.conf  turbo.json
firmware/apps/: keeper.conf  pot.conf
firmware/boards/: esp32c6_devkitc_hpcore.conf  esp32c6_devkitc_hpcore.overlay  esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  frdm_rw612.conf  frdm_rw612.overlay  nrf7002dk_nrf5340_cpuapp.conf
firmware/keeper/: CMakeLists.txt  package.json
firmware/keeper/boards/: esp32s3_devkitc_procpu.overlay  yd_esp32s3_devkitc_procpu.overlay
firmware/keeper/src/: main.c
firmware/pot/: CMakeLists.txt  package.json
firmware/pot/boards/: esp32s3_devkitc_procpu.conf
firmware/pot/socs/: esp32s3_procpu.overlay
firmware/scripts/: firmware.mjs  firmware.ts
firmware/socs/: esp32s3_procpu.conf  esp32s3_procpu.overlay
firmware/src/: korra_ethernet.c  korra_ethernet.h  korra_internet.c  korra_internet.h  korra_utils.h  korra_wifi.c  korra_wifi.h  led.c  main.c  networking.c  networking.h
firmware/src/certs/: CMakeLists.txt  korra_certs.c  korra_certs.h  korra_certs_private.h  sectigo.cer
firmware/src/cloud/: CMakeLists.txt  korra_cloud.c  korra_cloud.h  korra_cloud_provisioning.c  korra_cloud_provisioning.h  url_encode.c  (+1 more)
(+291 files in other folders)
